--- a/Book.html
+++ b/Book.html
@@ -115,7 +115,7 @@
         <div id="upcomingbookcontainer">
             <div class="row">
                 <div class="col-lg-4 col-md-4 col-sm-12 ">
-                    <img class="img" src="upcoming-image2.png" alt="">
+                    <img class="img-fluid" src="upcoming-image2.png" alt="">
                 </div>
                 <div class="col-lg-6 col-md-4 col-sm-12 ">
                     <div id="upcomingbookcontainer2">
