--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-md-6 col-sm-6">
-                    <img src="about-image.png" alt="">
+                    <img class="img-fluid" src="about-image.png" alt="">
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-6 m-auto">
                     <h1 class="font myheading">A Word From The Author</h1>
