--- a/Book.html
+++ b/Book.html
@@ -46,10 +46,10 @@
                     <h1 class="font"> This Dark Road To Mercy</h1>
                     <p class="">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
                         consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
-                    <button class="btn " id="btn1">$6.05-Purchase</button>
+                    <button class="btn d-block " id="btn1">$6.05-Purchase</button>
                     <button class="btn " id="btn2"><i class="fa-brands fa-amazon px-1"></i>READ ON KINDLE</button>
                 </div>
-                <div class="col-lg-4 col-md-12 col-sm-12" id="myfirstimg">
+                <div class="col-lg-4 col-md-12 col-sm-12 text-center" id="myfirstimg">
                 </div>
             </div>
         </div>
@@ -60,28 +60,28 @@
         </div>
         <div class="container">
             <div class="row">
-                <div class="col-lg-3 col-md-3 col-sm-12 p-4">
+                <div class="col-lg-3 col-md-6 col-sm-12 p-4">
                     <div class="card border-0 text-center">
                         <img class="img-fluid" src="hero-image01.png" alt="">
                         <div class="card-body font fs-5">This Dark Road to Mercy</div>
                         <button class="btn d-block" id="btn1">$6.05-Purchase</button>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-3 col-sm-12 p-4">
+                <div class="col-lg-3 col-md-6 col-sm-12 p-4">
                     <div class="card border-0 text-center">
                         <img class="img-fluid" src="book-cover2.png" alt="">
                         <div class="card-body font fs-5 ">Liar Of Dreams</div>
                         <button class="btn d-block" id="btn1">$6.00-Purchase</button>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-3 col-sm-12 p-4">
+                <div class="col-lg-3 col-md-6 col-sm-12 p-4">
                     <div class="card border-0 text-center">
                         <img class="img-fluid" src="book-cover3.png" alt="">
                         <div class="card-body font fs-5">Before The Devil Breaks You</div>
                         <button class="btn d-block" id="btn1">$6.00-Purchase</button>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-3 col-sm-12 p-4">
+                <div class="col-lg-3 col-md-6 col-sm-12 p-4">
                     <div class="card border-0 text-center">
                         <img class="img-fluid" src="book-cover4.png" alt="">
                         <div class="card-body font fs-5">Now You See Me</div>
@@ -114,10 +114,10 @@
         </div>
         <div id="upcomingbookcontainer">
             <div class="row">
-                <div class="col-lg-4 col-md-4 col-sm-12 ">
-                    <img class="img-fluid" src="upcoming-image2.png" alt="">
+                <div class="col-lg-6 col-md-6 col-sm-12 ">
+                    <img class="img-fluid " src="upcoming-image2.png" alt="">
                 </div>
-                <div class="col-lg-6 col-md-4 col-sm-12 ">
+                <div class="col-lg-6 col-md-6 col-sm-12 ">
                     <div id="upcomingbookcontainer2">
                         <h1 class="font myheading">Upcoming Book</h1>
                         <p >Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur
@@ -142,7 +142,7 @@
                                 <div class="col">
                                     <button class="btn" id="btn1">Submit</button>
                                 </div>
-                        </div>
+                            </div>
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-12 position-relative">
