--- a/Contact.html
+++ b/Contact.html
@@ -37,26 +37,27 @@
         </div>
     </header>
     <section>
-        <div class="container-fluid position-relative">
-            <div class=" container-fluid d-flex flex-column align-items-center justify-content-center "
+        <div class=" container-fluid d-flex flex-column align-items-center justify-content-center "
             style="height: 450px; background-color: rgb(252,235,230);">
-                <h1 class="bookheading">Contact</h1>
-                <p class="text-center">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit</p>
-            </div>
-            <div class="contactdiv">
-                <h2 class="font">Get In Touch</h2>
-                <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit</p>
-                <p> <i class="fa-solid fa-envelope pe-2"></i>mail@example.com</p>
-                <hr>
-                <p class="fs-5">Send Me a Message</p>
-                <input class="form-control mb-4" placeholder="Your Name" type="text">
-                <input class="form-control my-4" placeholder="Email" type="text">
-                <input class="form-control my-4" placeholder="Subject" type="text">
-                <textarea class="form-control my-4" placeholder="Message" type="text" rows="4"></textarea>
-                <button class="btn" id="btn1">Send Message</button>
+            <h1 class="bookheading">Contact</h1>
+            <p class="text-center">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit</p>
+        </div>
+        <div class="contactdiv">
+            <h2 class="font">Get In Touch</h2>
+            <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit</p>
+            <p class="fs-4 my-2"> <i class="fa-solid fa-envelope pe-2" style="color: rgb(148,102,89);"></i> <span >mail@example.com</span></p>
+            <hr style="color: rgb(148,102,89);">
+            <p class="fs-3 font mt-5" style="color: rgb(148,102,89);">Send Me a Message</p>
+            <input class="form-control mb-4" placeholder="Your Name" type="text">
+            <input class="form-control my-4" placeholder="Email" type="text">
+            <input class="form-control my-4" placeholder="Subject" type="text">
+            <textarea class="form-control my-4" placeholder="Message" type="text" rows="4"></textarea>
+            <button class="btn" id="btn1">Send Message</button>
 
-                <h3 class="font">Follorw Me</h3>
-            </div>
+            <h3 class="font mt-5">Follorw Me</h3>
+            <i class="fa-brands fa-facebook border p-2 me-1 text-white fs-5 rounded-circle" style="background-color: rgb(148,102,89) ;"></i>
+            <i class="fa-brands fa-twitter border p-2 mx-1 text-white fs-5 rounded-circle" style="background-color: rgb(148,102,89) ;"></i>
+            <i class="fa-brands fa-youtube border p-2 mx-1 text-white fs-5 rounded-circle" style="background-color: rgb(148,102,89) ;"></i>
         </div>
 
         <div class="container-fluid mycontainer">
@@ -91,10 +92,10 @@
                 </div>
                 <div class="col-md-4 col-lg-4 col-sm-12">
                     <ul>
-                        <li><a class="">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="Book.html">Books</a></li>
-                        <li><a class="">Bio</a></li>
-                        <li><a class="">Contact</a></li>
+                        <li><a href="Bio.html">Bio</a></li>
+                        <li><a href="Contact.html">Contact</a></li>
                     </ul>
                 </div>
                 <div class="col-md-4 col-lg-4 col-sm-12">
@@ -102,11 +103,11 @@
                         <li><a href="">
                                 <i class="fa-brands fa-facebook-f fs-4"></i>
                             </a></li>
+                            <li><a href="">
+                                    <i class="fa-brands fa-twitter fs-4"></i>
+                                </a></li>
                         <li><a href="">
-                                <i class="fa-brands fa-instagram fs-4 "></i>
-                            </a></li>
-                        <li><a href="">
-                                <i class="fa-brands fa-twitter fs-4 "></i>
+                                <i class="fa-brands fa-instagram fs-4"></i>
                             </a></li>
                     </div>
                 </div>
