--- a/index.html
+++ b/index.html
@@ -44,22 +44,29 @@
                     <h1 class="font"> This Dark Road To Mercy</h1>
                     <p class="">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
                         consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
-                    <button class="btn d-block" id="btn1">$6.05-Purchase</button>
-                    <button class="btn " id="btn2"><i class="fa-brands fa-amazon px-1"></i> READ ON KINDLE</button>
+                    <button class="btn" id="btn1">$6.05-Purchase</button>
+                    <button class="btn" id="btn2"><i class="fa-brands fa-amazon px-1"></i> READ ON KINDLE</button>
                 </div>
                 <div class="col-lg-4 col-md-12 col-sm-12" id="myfirstimg">
                 </div>
             </div>
         </div>
-        <div class="container-fluid text-center my-4">
+        <div class="container-fluid text-center my-5">
             <h1 class="font fs-4"> AS FEATURED ON</h1>
+            <div class=" container myhomelogo ">
+                <img src="logo001.png" alt="">
+                <img src="logo002.png" alt="">
+                <img src="logo003.png" alt="">
+                <img src="logo004.png" alt="">
+                <img src="logo005.png " alt="">
+            </div>
         </div>
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 col-md-6 col-sm-6">
-                    <img class="img-fluid" src="about-image.png" alt="">
+                <div class="col-lg-6 col-md-12 col-sm-12">
+                    <img class="img-fluid text-center" src="about-image.png" alt="">
                 </div>
-                <div class="col-lg-6 col-md-6 col-sm-6 m-auto">
+                <div class="col-lg-6 col-md-12 col-sm-12 m-auto">
                     <h1 class="font myheading">A Word From The Author</h1>
                     <p>
                         A Word From The Author
@@ -88,7 +95,7 @@
         <div class="container-fluid my-5" style="background-color: rgb(255,250,248);">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-6 col-md-6 col-sm-12 m-auto">
+                    <div class="col-lg-6 col-md-12 col-sm-12 m-auto">
                         <p>Complete Series</p>
                         <h1 class="font myheading">Smoke And The Heart</h1>
                         <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
@@ -98,19 +105,19 @@
                         </p>
                         <button class="btn" id="btn1"> BUY COMPLETE SERIES </button>
                     </div>
-                    <div class="col-lg-6 col-md-6 col-sm-12 my-5">
+                    <div class="col-lg-6 col-md-12 col-sm-12 my-5 text-center">
                         <div class="row">
-                            <div class="col-lg-6 col-md-6 col-sm-12 mt-3">
-                                <img src="book-cover1.png" alt="">
+                            <div class="col-lg-6 col-md-6 col-sm-12 mt-3 text-center">
+                                <img class="img-fluid" src="book-cover1.png" alt="">
                             </div>
                             <div class="col-lg-6 col-md-6 col-sm-12 mt-3">
-                                <img src="book-cover2.png" alt="">
+                                <img class="img-fluid" src="book-cover2.png" alt="">
                             </div>
                             <div class="col-lg-6 col-md-6 col-sm-12 mt-3">
-                                <img src="book-cover3.png" alt="">
+                                <img class="img-fluid" src="book-cover3.png" alt="">
                             </div>
                             <div class="col-lg-6 col-md-6 col-sm-12 mt-3">
-                                <img src="book-cover4.png" alt="">
+                                <img class="img-fluid" src="book-cover4.png" alt="">
                             </div>
                         </div>
                     </div>
@@ -120,12 +127,12 @@
         <div class="container-fluid" style="background-color: rgb(255,250,248);">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-4 col-md-4 col-sm-12 m-auto">
+                    <div class="col-lg-4 col-md-12 col-sm-12 m-auto">
                         <h1 class="font myheading">What Readers Are Saying</h1>
                     </div>
-                    <div class="col-lg-8 col-md-8 col-sm-12 my-5">
+                    <div class="col-lg-8 col-md-8 col-sm-12 my-5 m-auto">
                         <div class="row">
-                            <div class="col-lg-6 col-md-4 col-sm-12 ">
+                            <div class="col-lg-6 col-md-12 col-sm-12 ">
                                 <div class="authorhomediv">
                                     <p>
                                         Justo vestibulum risus imperdiet conse ctetur conse ctetur pretium urna
@@ -134,8 +141,8 @@
                                     </p>
                                     <div class="d-flex mt-5">
                                         <div>
-                                            <img src="testimonials-image.png" alt="">
-                                        </div>
+                                            <img class="img-fluid" src="testimonials-image.png" alt="">
+                                        </div> 
                                         <div class="px-3 py-1">
                                             <h5 class="p-0 m-0 ">
                                                 Mike Sendler
@@ -147,7 +154,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-6 col-md-4 col-sm-12">
+                            <div class="col-lg-6 col-md-12 col-sm-12">
                                 <div class="authorhomediv">
                                     <p>
                                         Justo vestibulum risus imperdiet conse ctetur conse ctetur pretium urna
@@ -156,7 +163,7 @@
                                     </p>
                                     <div class="d-flex mt-5">
                                         <div>
-                                            <img src="testimonials-image02.png" alt="">
+                                            <img class="img-fluid" src="testimonials-image02.png" alt="">
                                         </div>
                                         <div class="px-3 py-1">
                                             <h5 class="p-0 m-0 ">
@@ -169,7 +176,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-6 col-md-4 col-sm-12">
+                            <div class="col-lg-6 col-md-12 col-sm-12">
                                 <div class="authorhomediv">
                                     <p>
                                         Justo vestibulum risus imperdiet conse ctetur conse ctetur pretium urna
@@ -178,7 +185,7 @@
                                     </p>
                                     <div class="d-flex mt-5">
                                         <div>
-                                            <img src="testimonials-image03.png" alt="">
+                                            <img class="img-fluid" src="testimonials-image03.png" alt="">
                                         </div>
                                         <div class="px-3 py-1">
                                             <h5 class="p-0 m-0 ">
@@ -191,7 +198,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-6 col-md-4 col-sm-12">
+                            <div class="col-lg-6 col-md-12 col-sm-12">
                                 <div class="authorhomediv">
                                     <p>
                                         Justo vestibulum risus imperdiet conse ctetur conse ctetur pretium urna
@@ -200,7 +207,7 @@
                                     </p>
                                     <div class="d-flex mt-5">
                                         <div>
-                                            <img src="testimonials-image04.png" alt="">
+                                            <img class="img-fluid" src="testimonials-image04.png" alt="">
                                         </div>
                                         <div class="px-3 py-1">
                                             <h5 class="p-0 m-0 ">
@@ -221,10 +228,10 @@
         </div>
         <div id="upcomingbookcontainer">
             <div class="row">
-                <div class="col-lg-4 col-md-4 col-sm-12 ">
+                <div class="col-lg-4 col-md-6 col-sm-12 ">
                     <img class="img-fluid" src="upcoming-image2.png" alt="">
                 </div>
-                <div class="col-lg-6 col-md-4 col-sm-12 ">
+                <div class="col-lg-6 col-md-6 col-sm-12 ">
                     <div id="upcomingbookcontainer2">
                         <h1 class="font myheading">Upcoming Book</h1>
                         <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur
