--- a/Book.html
+++ b/Book.html
@@ -11,26 +11,24 @@
 </head>
 <body>
     <header>
-        <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-4 col-lg-4 col-sm-12 text-center mynavbar">
-                <h2>Book store</h2>
-            </div>
-            <div class="col-md-4 col-lg-4 col-sm-12 text-center">
-                <ul>
-                <li><a href="index.html">Home</a></li>
-                    <li><a href="Book.html">Books</a></li>
-                    <li><a href="Bio.html">Bio</a></li>
-                    <li><a href="Contact.html">Contact</a></li>
+        <div class="container-fluid pt-2" >
+            <div class="row">
+                <div class="col-md-12 col-lg-4 col-sm-12 text-center mynavbar">
+                    <h1>Book store</h1>
+                </div>
+                <div class="col-md-10 col-lg-6 col-sm-10 my-2">
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="Book.html">Books</a></li>
+                        <li><a href="Bio.html">Bio</a></li>
+                        <li><a href="Contact.html">Contact</a></li>
+                        <div>
+                            <i class="fa-solid fa-user fs-4 me-3 "></i>
+                            <a href=""><i class="fa-solid fa-bag-shopping fs-4 text-dark"></i></a>
+                        </div>
                     </ul>
                 </div>
-                <div class="col-md-4 col-lg-4 col-sm-12 text-center">
-                    <div class="d-inline ms-5 ">
-                        <i class="fa-solid fa-user fs-4 m-2"></i>
-                        <li><a href=""><i class="fa-solid fa-bag-shopping fs-4"></i></a></li>
-                        </div>
-                </div>
-        </div>
+            </div>
         </div>
      </header>
     <section>
@@ -62,28 +60,28 @@
             <div class="row">
                 <div class="col-lg-3 col-md-6 col-sm-12 p-4">
                     <div class="card border-0 text-center">
-                        <img class="img-fluid" src="hero-image01.png" alt="">
+                        <img class="img-fluid" src="img/hero-image01.png" alt="">
                         <div class="card-body font fs-5">This Dark Road to Mercy</div>
                         <button class="btn d-block" id="btn1">$6.05-Purchase</button>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-12 p-4">
                     <div class="card border-0 text-center">
-                        <img class="img-fluid" src="book-cover2.png" alt="">
+                        <img class="img-fluid" src="img/book-cover2.png" alt="">
                         <div class="card-body font fs-5 ">Liar Of Dreams</div>
                         <button class="btn d-block" id="btn1">$6.00-Purchase</button>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-12 p-4">
                     <div class="card border-0 text-center">
-                        <img class="img-fluid" src="book-cover3.png" alt="">
+                        <img class="img-fluid" src="img/book-cover3.png" alt="">
                         <div class="card-body font fs-5">Before The Devil Breaks You</div>
                         <button class="btn d-block" id="btn1">$6.00-Purchase</button>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-12 p-4">
                     <div class="card border-0 text-center">
-                        <img class="img-fluid" src="book-cover4.png" alt="">
+                        <img class="img-fluid" src="img/book-cover4.png" alt="">
                         <div class="card-body font fs-5">Now You See Me</div>
                         <button class="btn d-block" id="btn1">$5.00-Purchase</button>
                     </div>
@@ -103,10 +101,10 @@
                             </div>
                         </div>
                     <div class="col-lg-6 col-md-6 col-sm-12 position-relative">
-                        <img class="img01" src="book-cover1.png" alt="">
-                        <img class="img02" src="book-cover2.png" alt="">
-                        <img class="img03" src="book-cover3.png" alt="">
-                        <img class="img04" src="book-cover4.png" alt="">
+                        <img class="img01" src="img/book-cover1.png" alt="">
+                        <img class="img02" src="img/book-cover2.png" alt="">
+                        <img class="img03" src="img/book-cover3.png" alt="">
+                        <img class="img04" src="img/book-cover4.png" alt="">
                     </div>
                 </div>
             </div>
@@ -115,7 +113,7 @@
         <div id="upcomingbookcontainer">
             <div class="row">
                 <div class="col-lg-6 col-md-6 col-sm-12 ">
-                    <img class="img-fluid " src="upcoming-image2.png" alt="">
+                    <img class="img-fluid " src="img/upcoming-image2.png" alt="">
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-12 ">
                     <div id="upcomingbookcontainer2">
@@ -146,8 +144,8 @@
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-12 position-relative">
-                        <img class="img05" src="book-cover3.png" alt="">
-                        <img class="img06" src="book-cover4.png" alt="">
+                        <img class="img05" src="img/book-cover3.png" alt="">
+                        <img class="img06" src="img/book-cover4.png" alt="">
                     </div>
                 </div>
             </div>
