--- a/Contact.html
+++ b/Contact.html
@@ -14,24 +14,22 @@
 
 <body>
     <header>
-        <div class="container-fluid">
+        <div class="container-fluid pt-2" >
             <div class="row">
-                <div class="col-md-4 col-lg-4 col-sm-12 text-center mynavbar">
-                    <h2>Book store</h2>
+                <div class="col-md-12 col-lg-4 col-sm-12 text-center mynavbar">
+                    <h1>Book store</h1>
                 </div>
-                <div class="col-md-4 col-lg-4 col-sm-12 text-center">
+                <div class="col-md-10 col-lg-6 col-sm-10 my-2">
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="Book.html">Books</a></li>
                         <li><a href="Bio.html">Bio</a></li>
                         <li><a href="Contact.html">Contact</a></li>
+                        <div>
+                            <i class="fa-solid fa-user fs-4 me-3 "></i>
+                            <a href=""><i class="fa-solid fa-bag-shopping fs-4 text-dark"></i></a>
+                        </div>
                     </ul>
-                </div>
-                <div class="col-md-4 col-lg-4 col-sm-12 text-center">
-                    <div class="d-inline ms-5 ">
-                        <i class="fa-solid fa-user fs-4 m-2"></i>
-                        <li><a href=""><i class="fa-solid fa-bag-shopping fs-4"></i></a></li>
-                    </div>
                 </div>
             </div>
         </div>
@@ -77,8 +75,8 @@
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-12 position-relative">
-                        <img class="img05" src="book-cover3.png" alt="">
-                        <img class="img06" src="book-cover4.png" alt="">
+                        <img class="img05" src="img/book-cover3.png" alt="">
+                        <img class="img06" src="img/book-cover4.png" alt="">
                     </div>
                 </div>
             </div>
