--- a/index.html
+++ b/index.html
@@ -14,24 +14,22 @@
 
 <body>
     <header>
-        <div class="container-fluid">
+        <div class="container-fluid pt-2" >
             <div class="row">
-                <div class="col-md-4 col-lg-4 col-sm-12 text-center mynavbar">
-                    <h2>Book store</h2>
+                <div class="col-md-12 col-lg-4 col-sm-12 text-center mynavbar">
+                    <h1>Book store</h1>
                 </div>
-                <div class="col-md-4 col-lg-4 col-sm-12 text-center">
+                <div class="col-md-10 col-lg-6 col-sm-10 my-2">
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="Book.html">Books</a></li>
                         <li><a href="Bio.html">Bio</a></li>
                         <li><a href="Contact.html">Contact</a></li>
+                        <div>
+                            <i class="fa-solid fa-user fs-4 me-3 "></i>
+                            <a href=""><i class="fa-solid fa-bag-shopping fs-4 text-dark"></i></a>
+                        </div>
                     </ul>
-                </div>
-                <div class="col-md-4 col-lg-4 col-sm-12 text-center">
-                    <div class="d-inline ms-5 ">
-                        <i class="fa-solid fa-user fs-4 m-2"></i>
-                        <li><a href=""><i class="fa-solid fa-bag-shopping fs-4"></i></a></li>
-                    </div>
                 </div>
             </div>
         </div>
@@ -54,17 +52,17 @@
         <div class="container-fluid text-center my-5">
             <h1 class="font fs-4"> AS FEATURED ON</h1>
             <div class=" container myhomelogo ">
-                <img src="logo001.png" alt="">
-                <img src="logo002.png" alt="">
-                <img src="logo003.png" alt="">
-                <img src="logo004.png" alt="">
-                <img src="logo005.png " alt="">
+                <img src="img/logo001.png" alt="">
+                <img src="img/logo002.png" alt="">
+                <img src="img/logo003.png" alt="">
+                <img src="img/logo004.png" alt="">
+                <img src="img/logo005.png " alt="">
             </div>
         </div>
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-md-12 col-sm-12">
-                    <img class="img-fluid text-center" src="about-image.png" alt="">
+                    <img class="img-fluid text-center" src="img/about-image.png" alt="">
                 </div>
                 <div class="col-lg-6 col-md-12 col-sm-12 m-auto">
                     <h1 class="font myheading">A Word From The Author</h1>
@@ -108,16 +106,16 @@
                     <div class="col-lg-6 col-md-12 col-sm-12 my-5 text-center">
                         <div class="row">
                             <div class="col-lg-6 col-md-6 col-sm-12 mt-3 text-center">
-                                <img class="img-fluid" src="book-cover1.png" alt="">
+                                <img class="img-fluid" src="img/book-cover1.png" alt="">
                             </div>
                             <div class="col-lg-6 col-md-6 col-sm-12 mt-3">
-                                <img class="img-fluid" src="book-cover2.png" alt="">
+                                <img class="img-fluid" src="img/book-cover2.png" alt="">
                             </div>
                             <div class="col-lg-6 col-md-6 col-sm-12 mt-3">
-                                <img class="img-fluid" src="book-cover3.png" alt="">
+                                <img class="img-fluid" src="img/book-cover3.png" alt="">
                             </div>
                             <div class="col-lg-6 col-md-6 col-sm-12 mt-3">
-                                <img class="img-fluid" src="book-cover4.png" alt="">
+                                <img class="img-fluid" src="img/book-cover4.png" alt="">
                             </div>
                         </div>
                     </div>
@@ -129,6 +127,8 @@
                 <div class="row">
                     <div class="col-lg-4 col-md-12 col-sm-12 m-auto">
                         <h1 class="font myheading">What Readers Are Saying</h1>
+                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accu santium doloremque lauda ntium.</p>
+                        <butto class="btn" id="btn1">READ ALL</butto>
                     </div>
                     <div class="col-lg-8 col-md-8 col-sm-12 my-5 m-auto">
                         <div class="row">
@@ -141,7 +141,7 @@
                                     </p>
                                     <div class="d-flex mt-5">
                                         <div>
-                                            <img class="img-fluid" src="testimonials-image.png" alt="">
+                                            <img class="img-fluid" src="img/testimonials-image.png" alt="">
                                         </div> 
                                         <div class="px-3 py-1">
                                             <h5 class="p-0 m-0 ">
@@ -163,7 +163,7 @@
                                     </p>
                                     <div class="d-flex mt-5">
                                         <div>
-                                            <img class="img-fluid" src="testimonials-image02.png" alt="">
+                                            <img class="img-fluid" src="img/testimonials-image02.png" alt="">
                                         </div>
                                         <div class="px-3 py-1">
                                             <h5 class="p-0 m-0 ">
@@ -185,7 +185,7 @@
                                     </p>
                                     <div class="d-flex mt-5">
                                         <div>
-                                            <img class="img-fluid" src="testimonials-image03.png" alt="">
+                                            <img class="img-fluid" src="img/testimonials-image03.png" alt="">
                                         </div>
                                         <div class="px-3 py-1">
                                             <h5 class="p-0 m-0 ">
@@ -207,7 +207,7 @@
                                     </p>
                                     <div class="d-flex mt-5">
                                         <div>
-                                            <img class="img-fluid" src="testimonials-image04.png" alt="">
+                                            <img class="img-fluid" src="img/testimonials-image04.png" alt="">
                                         </div>
                                         <div class="px-3 py-1">
                                             <h5 class="p-0 m-0 ">
@@ -229,7 +229,7 @@
         <div id="upcomingbookcontainer">
             <div class="row">
                 <div class="col-lg-4 col-md-6 col-sm-12 ">
-                    <img class="img-fluid" src="upcoming-image2.png" alt="">
+                    <img class="img-fluid" src="img/upcoming-image2.png" alt="">
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-12 ">
                     <div id="upcomingbookcontainer2">
@@ -260,8 +260,8 @@
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-12 position-relative">
-                        <img class="img05" src="book-cover3.png" alt="">
-                        <img class="img06" src="book-cover4.png" alt="">
+                        <img class="img05" src="img/book-cover3.png" alt="">
+                        <img class="img06" src="img/book-cover4.png" alt="">
                     </div>
                 </div>
             </div>
